# 2026

./: Cargo.toml
docs/: index.html  uv_2026_wasm.d.ts  uv_2026_wasm.js  uv_2026_wasm_bg.js  uv_2026_wasm_bg.wasm  uv_2026_wasm_bg.wasm.d.ts
src/: main.rs
wasm/: Cargo.toml  index.html
wasm/src/: lib.rs
