[package]
name = "uv-2026-wasm"
version = "0.1.0"
authors = ["Johannes Dahlström <johannes.dahlstrom@gmail.com>"]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
console_error_panic_hook = { version = "0.1.7", optional = true }

[dependencies.re]
path = "../../retrofire/core"
package = "retrofire-core"
default-features = false
features =["libm"]

[dependencies.re-front]
path = "../../retrofire/front"
package = "retrofire-front"
features = ["wasm"]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = "thin"
